--- a/app/src/main/res/drawable/curve_bg.xml
+++ b/app/src/main/res/drawable/curve_bg.xml
@@ -2,12 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#ffffff"/>
-            <corners android:radius="7dp" />
-            <stroke
-                android:width="1dp"
-                android:color="#27000000"
-                />
+            <solid android:color="@color/blur"/>
+            <corners android:radius="8dp" />
         </shape>
     </item>
 </selector> 
