info layout has been updated

--- a/app/src/main/res/layout/food_cardview.xml
+++ b/app/src/main/res/layout/food_cardview.xml
@@ -59,7 +59,7 @@
                 android:textStyle="bold" />
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/btnBuy"
                 android:layout_width="65dp"
                 android:layout_height="48dp"
                 android:layout_above="@+id/etImage"
