resources has been updated

--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -214,15 +214,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/raleway_semibold"
-        android:text="Description"
+        android:text=" Description"
         android:textAlignment="center"
         android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.072"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.693" />
+        app:layout_constraintVertical_bias="0.678" />
 
     <TextView
         android:id="@+id/etDescriptionDetail"
@@ -240,18 +240,18 @@
 
     <Button
         android:id="@+id/btnThankyou"
-        android:layout_width="215dp"
-        android:layout_height="47dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:alpha="0.75"
-        android:backgroundTint="@null"
         android:background="@drawable/curve_bg"
+        android:backgroundTint="@null"
         android:elevation="12dp"
         android:gravity="center"
         android:text="Thank You!!🤗"
         android:textColor="@color/perfectblack"
-        android:textSize="20sp"
+        android:textSize="25sp"
         android:textStyle="bold"
-        app:cornerRadius="12dp"
+        app:cornerRadius="13dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
