adjusted the design for the category button

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -83,6 +83,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                app:backgroundTint="@null"
                 android:background="@drawable/ripple_effect"
                 android:text="Starter"
                 android:textAlignment="center"
@@ -96,6 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                app:backgroundTint="@null"
                 android:background="@drawable/ripple_effect"
                 android:text="Chicken"
                 android:textAlignment="center"
@@ -109,6 +111,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                app:backgroundTint="@null"
                 android:background="@drawable/ripple_effect"
                 android:text="Lamb"
                 android:textAlignment="center"
@@ -122,6 +125,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                app:backgroundTint="@null"
                 android:background="@drawable/ripple_effect"
                 android:text="Pasta"
                 android:textAlignment="center"
@@ -135,6 +139,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                app:backgroundTint="@null"
                 android:background="@drawable/ripple_effect"
                 android:text="Pork"
                 android:textAlignment="center"
@@ -148,6 +153,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                app:backgroundTint="@null"
                 android:background="@drawable/ripple_effect"
                 android:text="Seafood"
                 android:textAlignment="center"
@@ -161,6 +167,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                app:backgroundTint="@null"
                 android:background="@drawable/ripple_effect"
                 android:text="Side"
                 android:textAlignment="center"
@@ -174,6 +181,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                app:backgroundTint="@null"
                 android:background="@drawable/ripple_effect"
                 android:text="Beef"
                 android:textAlignment="center"
@@ -187,6 +195,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                app:backgroundTint="@null"
                 android:background="@drawable/ripple_effect"
                 android:text="Vegan"
                 android:textAlignment="center"
@@ -200,6 +209,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                app:backgroundTint="@null"
                 android:background="@drawable/ripple_effect"
                 android:text="Vegetarian"
                 android:textAlignment="center"
@@ -213,6 +223,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                app:backgroundTint="@null"
                 android:background="@drawable/ripple_effect"
                 android:text="Breakfast"
                 android:textAlignment="center"
@@ -226,6 +237,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                app:backgroundTint="@null"
                 android:background="@drawable/ripple_effect"
                 android:text="Goat"
                 android:textAlignment="center"
@@ -239,6 +251,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                app:backgroundTint="@null"
                 android:background="@drawable/ripple_effect"
                 android:text="Dessert"
                 android:textAlignment="center"
@@ -252,6 +265,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                app:backgroundTint="@null"
                 android:textAlignment="center"
                 android:background="@drawable/ripple_effect"
                 android:text="Miscellaneous"
