--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dashCategory"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:backgroundTint="@null"
     android:background="@drawable/dash_design"
@@ -59,7 +59,7 @@
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
-        android:layout_width="406dp"
+        android:layout_width="match_parent"
         android:layout_height="75dp"
         android:layout_marginTop="30dp"
         android:fillViewport="true"
